# guts_sos

./: .gitignore  CMakeLists.txt  credits.txt
src/: main.cpp
src/core/: Animation.hpp  DefaultWindowWrap.hpp  LocalizedText.hpp  Utils.hpp  Window.cpp  Window.hpp  WindowWrap.cpp  WindowWrap.hpp
src/core/logger/: Logger.cpp  Logger.hpp
src/core/pauseble_clock/: PausebleClock.cpp  PausebleClock.hpp
src/logger/: Logger.cpp  Logger.hpp
src/res/: res.cpp  res.hpp
src/scenes/: Curtain.cpp  Curtain.hpp  Intro.cpp  Intro.hpp  MainMenu.cpp  MainMenu.hpp  Opening.cpp  Opening.hpp  SceneManager.cpp  SceneManager.hpp  SceneManager.tpp
src/scenes/levels/: Level1.cpp  Level1.hpp
src/scenes/local_scenes/: BasementBackground.cpp  BasementBackground.hpp  Curtain.cpp  Curtain.hpp  Shaker.cpp  Shaker.hpp  Telegraph.cpp  Telegraph.hpp
src/scenes/local_scenes/characters/: Character.cpp  Character.hpp
src/telegraph/: Telegraph.cpp  Telegraph.hpp
src/ui/: widget.hpp
src/ui/Buttons/: BaseButton.cpp  BaseButton.hpp  LabelButton.cpp  LabelButton.hpp  label_button.cpp  label_button.hpp
src/ui/character/: Character.cpp  Character.hpp
src/ui/label/: StampLabel.cpp  StampLabel.hpp  label.cpp  label.hpp  stamp_label.cpp  stamp_label.hpp
src/ui/main_menu/: main_menu.cpp  main_menu.hpp
src/ui/sprite/: Sprite.cpp  Sprite.hpp  SpriteWithLabel.cpp  SpriteWithLabel.hpp
src/ui/task_tablet/: task_tablet.cpp  task_tablet.hpp
src/ui/widget/: widget.cpp  widget.hpp  widget.tpp
voice_maker/: main.py
